# VisionNavi

./: .gitignore  README.md
contracts/: canonical_command.schema.json
docs/: architecture.md  continuous-llm-runtime-roadmap.md  continuous-llm-runtime.md  external-first-stabilization-plan.md  livekit-wakeword-setup.md  mvp-roadmap.md  (+7 more)
orchestrator/: pyproject.toml  requirements.txt
orchestrator/app/: __init__.py  main.py
orchestrator/app/agent/: loop.py
orchestrator/app/api/routes/: health.py  pipeline.py
orchestrator/app/automation/browser/: executor.py  external_agent_adapter.py
orchestrator/app/automation/desktop/: executor.py  external_agent_adapter.py
orchestrator/app/core/: build_info.py  settings.py
orchestrator/app/models/: action_step.py  agent_adapter.py  canonical_command.py  command_constraint.py  execution_backend.py  map_route.py  model_api.py  requests.py  session.py
orchestrator/app/services/: audio_diagnostics_service.py  audio_transcription_service.py  command_constraint_service.py  command_normalizer.py  guidance_tts_service.py  intent_router.py  map_route_parser.py  model_client.py  safety_classifier.py  session_store.py  wakeword_service.py
orchestrator/tests/: test_audio_transcription_service.py  test_browser_executor.py  test_command_constraint_service.py  test_constraint_and_model_routing.py  test_dark_mode_executor.py  test_desktop_executor.py  test_external_benchmarks.py  test_external_browser_agent_adapter.py  test_external_desktop_agent_adapter.py  test_model_client.py  test_pipeline.py  test_wakeword_service.py
(+96 files in other folders)
