[project]
name = "visionnavi-orchestrator"
version = "0.1.0"
description = "Local orchestrator for the VisionNavi hybrid agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "playwright>=1.48,<2.0",
  "httpx>=0.27,<1.0",
  "pywinauto>=0.6.8,<1.0",
  "pywin32>=306",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
